[gd_scene load_steps=8 format=3 uid="uid://btwoilnhf26kx"]

[ext_resource type="Script" path="res://Functionality/Scripts/necromancer_enemy.gd" id="1_wyk1v"]
[ext_resource type="Texture2D" uid="uid://4hp7y00ryhg" path="res://Assets/pixilart-drawing.png" id="2_u8maj"]
[ext_resource type="FontFile" uid="uid://crm5aodm5xa2d" path="res://at01.ttf" id="3_54j15"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6v0k0"]
size = Vector2(16, 50)

[sub_resource type="CircleShape2D" id="CircleShape2D_e5m5r"]
radius = 181.069

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_27s32"]
radius = 17.0
height = 60.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_waxoo"]
bg_color = Color(1, 0, 0, 1)

[node name="necromancer_enemy" type="CharacterBody2D" groups=["enemies"]]
collision_mask = 2
script = ExtResource("1_wyk1v")

[node name="enemy_sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_u8maj")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_6v0k0")

[node name="AttackRange" type="Area2D" parent="."]

[node name="RangeShape" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_e5m5r")

[node name="HitBox" type="Area2D" parent="."]
position = Vector2(0, 3)
collision_layer = 2
collision_mask = 6

[node name="HitBoxShape" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CapsuleShape2D_27s32")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -9.0
offset_top = -41.0
offset_right = 38.0
offset_bottom = -24.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("3_54j15")
theme_override_font_sizes/font_size = 16
theme_override_styles/fill = SubResource("StyleBoxFlat_waxoo")
max_value = 50.0
show_percentage = false

[node name="Attacktimer" type="Timer" parent="."]
wait_time = 1.5

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="body_exited" from="HitBox" to="." method="_on_hit_box_body_exited"]
[connection signal="timeout" from="Attacktimer" to="." method="_on_attacktimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
